<resources>
    <string name="app_name">MXH</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_content">Add</string>

    <string name="action_on_boarding_done">Bắt đầu</string>
    <string name="action_on_boarding_skip">Bỏ qua</string>
    <string name="button_next">Tiếp tục</string>
    <string name="button_back">Quay lại</string>
    <string-array name="onboarding_text">
        <item name="onboarding_text_1">Mạng xã hội</item>
        <item name="onboarding_text_2">Kết nối</item>
        <item name="onboarding_text_3">Chia sẻ</item>
    </string-array>
    <string-array name="onboarding_description">
        <item name="onboarding_text_1">Hỏi đáp, tâm sự, riêng tư, review trải nghiệm mọi thứ theo sở thích và mối quan tâm</item>
        <item name="onboarding_text_2">Kết nối với mọi người xung quanh</item>
        <item name="onboarding_text_3">Chia sẻ đam mê, sở thích</item>
    </string-array>

    <string name="login_email">Email</string>
    <string name="login_password">Mật khẩu</string>
    <string name="login_forgot_password">Quên mật khẩu?</string>
    <string name="login_connect_with">Hoặc đăng nhập với</string>
    <string name="login_dont_account">Bạn chưa có tài khoản?</string>
    <string name="login_signup">Đăng ký</string>
    <string name="login_signin">Đăng nhập</string>
    <!--    <string name="login_connect_with">Or Connect with</string>-->
    <!--    <string name="login_dont_account">Don\'t have an Account?</string>-->

    <string name="register_signup">Đăng ký</string>
    <string name="register_name">Họ và tên</string>
    <string name="register_email">Email</string>
    <string name="register_password">Mật khẩu</string>
    <string name="register_have_account">Bạn đã có tài khoản?</string>
    <!--    <string name="register_have_account">Already have an Account?</string>-->

    <string name="phone_hello">Xin Chào!</string>
    <string name="phone_content1">Vui lòng nhập số điện thoại của bạn để đăng ký hoặc đăng nhập</string>
    <string name="phone_content2">Vui lòng đợi và nhập mã xác thực được gửi đến số điện thoại của bạn</string>
    <string name="phone_signin">Tiếp tục</string>
    <string name="phone">0987654321</string>
    <string name="phone_verify">Xác thực</string>
    <string name="phone_did_otpcode">Không nhận được mã OTP?</string>
    <string name="phone_resend">Gửi lại</string>
    <string name="phone_wellcome">Chào mừng bạn!</string>
    <string name="phone_content3">Hãy cập nhập thông tin để mọi người dễ dàng kết nối với bạn hơn nhé ❤</string>
    <string name="phone_name">Tên hiển thị</string>
    <string name="phone_birthday">Ngày sinh</string>
    <string name="phone_gender">Giới tính</string>
    <string name="phone_signup">Lưu</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_video">Video</string>
    <string name="menu_friend">Bạn bè</string>
    <string name="menu_messenger">Nhắn tin</string>
    <string name="menu_profile">Cá nhân</string>

    <string name="menu_logout">Đăng xuất</string>

    <string name="post_like">Thích</string>
    <string name="post_comment">Bình luận</string>
    <string name="post_share">Chia sẻ</string>

    <string name="create_post">Bạn đang nghĩ gì?</string>
    <string name="create_new_post">Tạo bài viết</string>
    <string name="create_post_send">Đăng</string>
    <string name="create_post_addimage">Thêm vào bài viết</string>

    <string name="profile_username">Guest</string>
    <string name="profile_intro">Nếu ai cũng có thể hiểu bạn, vậy bạn phải bình thường tới mức nào đây?</string>
    <string name="profile_gender">Khác</string>
    <string name="profile_birthday">22/02/2002</string>
    <string name="profile_phone">0987654321</string>
    <string name="profile_post">Bài viết</string>

    <string name="updateprofile">Chỉnh sửa thông tin</string>
    <string name="updateprofile_save">Lưu</string>
    <string name="updateprofile_person">Cá nhân</string>
    <string name="updateprofile_username">Tên hiển thị</string>
    <string name="updateprofile_birthday">Ngày sinh</string>
    <string name="updateprofile_gender">Giới tính</string>
    <string name="updateprofile_introduce">Giới thiệu</string>
    <string name="updateprofile_intro">Vài dòng giới thiệu về bạn</string>
    <string name="updateprofile_phone">Số điện thoại</string>

    <string-array name="gender">
        <item>Nam</item>
        <item>Nữ</item>
        <item>Khác</item>
    </string-array>

    <string name="cmt_cmt">Viết bình luận…</string>

    <string name="chat_messenger">Messenger</string>
    <string name="chat_name">Group Name</string>
    <string name="chat_group">Nhóm mới</string>
    <string name="chat_chat">Nhập tin nhắn…</string>
    <string name="chat_create">Tạo</string>

    <string name="create_group_btn">Tạo</string>
    <string name="create_group_name">Đặt tên cho đoạn chat mới</string>
    <string name="create_group_edittext">Tên nhóm (Bắt buộc)</string>

    <string name="post_edit">Chỉnh sửa</string>
    <string name="post_delete">Xoá</string>

    <string name="editpost_toolbar">Chỉnh sửa bài viết</string>
    <string name="editpost_save">Lưu</string>
    <string name="editpost_content">Bạn viết gì đi…</string>


</resources>