<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.UpdateProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/updateprofile_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/updateprofile">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/updateprofile_save"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#1616B5"
                android:text="@string/updateprofile_save"
                android:textColor="@color/white"
                android:visibility="visible"
                app:cornerRadius="10dp" />

            <ProgressBar
                android:id="@+id/updateprofile_progressbar"
                style="@android:style/Widget.ProgressBar.Inverse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="10dp"
                android:visibility="gone" />

        </com.google.android.material.appbar.MaterialToolbar>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/colorPlaceholder" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/updateprofile_person"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateprofile_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edt"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/updateprofile_username"
                android:imeOptions="flagForceAscii|actionNext"
                android:importantForAutofill="no"
                android:lines="1"
                android:maxLines="1"
                android:minHeight="52dp"
                android:padding="16dp"
                android:textColorHint="@color/gray600" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edt"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/til1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:src="@drawable/ic_cake" />

            <TextView
                android:id="@+id/updateprofile_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:minHeight="52dp"
                android:paddingVertical="16dp"
                android:text="@string/updateprofile_birthday" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_edt"
            app:boxStrokeColor="#eef3f9"
            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/ll1">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/updateprofile_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_gender"
                android:drawablePadding="8dp"
                android:hint="@string/phone_gender"
                android:inputType="none"
                android:lines="1"
                android:maxLines="1"
                android:minHeight="52dp"
                android:padding="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/til2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateprofile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edt"
                android:hint="@string/updateprofile_phone"
                android:imeOptions="flagForceAscii|actionNext"
                android:importantForAutofill="no"
                android:drawableStart="@drawable/ic_phone_call"
                android:drawablePadding="8dp"
                android:minHeight="52dp"
                android:inputType="phone"
                android:lines="1"
                android:maxLines="1"
                android:padding="16dp"
                android:textColorHint="@color/gray600" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/updateprofile_introduce"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@+id/til3" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:boxBackgroundMode="none"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/tv2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/updateprofile_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_edt"
                android:hint="@string/updateprofile_intro"
                android:imeOptions="flagForceAscii|actionNext"
                android:importantForAutofill="no"
                android:minHeight="52dp"
                android:padding="16dp"
                android:textColorHint="@color/gray600" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>